<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.fragments.HomeFragment">

    <!--  un scrollview no puede tener mas de un elemento
            por lo que se adopta utilizar un linearlayout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--android:background="@drawable/shape_parrafo"-->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="0dp"
                android:layout_margin="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/ivcombo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImagenViewHome"
                        android:src="@drawable/combo"
                        android:layout_marginTop="5dp"
                        android:scaleType="centerCrop"
                        android:layout_margin="5dp">
                    </ImageView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp"
                        android:layout_margin="5dp">
                    </View>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_titulo"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamaño_titulo"
                        android:textColor="@color/colorAccent"
                        android:layout_marginLeft="@dimen/margin_home_titulo"
                        android:layout_marginRight="@dimen/margin_home_titulo"
                        android:layout_marginTop="@dimen/margin_home_titulo"
                        android:gravity="center">
                    </TextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp">
                    </View>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp">
                    </View>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_titulo_logo"
                        android:textSize="@dimen/tamaño_titulo"
                        android:textColor="@color/colorAccent"
                        android:layout_marginLeft="@dimen/margin_home_titulo"
                        android:layout_marginRight="@dimen/margin_home_titulo"
                        android:layout_marginTop="@dimen/margin_home_titulo"
                        android:gravity="center"
                        android:textStyle="bold"
                        >
                    </TextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp">
                    </View>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_descripcion"
                        android:textSize="@dimen/tamaño_descripcion"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginLeft="@dimen/margin_home_titulo"
                        android:layout_marginRight="@dimen/margin_home_titulo"
                        android:layout_marginTop="@dimen/margin_home_titulo"
                        >
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="0dp"
                android:layout_margin="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/ivFabian"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImagenViewHome"
                        android:src="@drawable/evento_nejo"
                        android:scaleType="centerCrop"
                        android:layout_margin="5dp">
                    </ImageView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp">
                    </View>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_por_que"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamaño_titulo"
                        android:textColor="@color/colorAccent"
                        android:layout_marginLeft="@dimen/margin_home_titulo"
                        android:layout_marginRight="@dimen/margin_home_titulo"
                        android:layout_marginTop="@dimen/margin_home_titulo">
                    </TextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp">
                    </View>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_respuesta"
                        android:textSize="@dimen/tamaño_descripcion"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginLeft="@dimen/margin_home_titulo"
                        android:layout_marginRight="@dimen/margin_home_titulo"
                        android:layout_marginTop="@dimen/margin_home_titulo">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="0dp"
                android:layout_margin="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/danielyelkin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImagenViewHome"
                        android:src="@drawable/elkin_y_daniel"
                        android:scaleType="centerCrop"
                        android:layout_margin="5dp">
                    </ImageView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp">
                    </View>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Animate Carnal!!"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamaño_titulo"
                        android:textColor="@color/colorAccent"
                        android:layout_marginLeft="@dimen/margin_home_titulo"
                        android:layout_marginRight="@dimen/margin_home_titulo"
                        android:layout_marginTop="@dimen/margin_home_titulo"
                        android:gravity="center">
                    </TextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                    </View>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>